--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "private": false,
   "scripts": {
     "dev": "vite",
-    "start": "vite preview",
+    "start": "set PORT=3000 && react-scripts start",
     "build": "vite build",
     "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\"",
     "lint:fix": "eslint --fix \"src/**/*.{js,jsx,ts,tsx}\"",
@@ -17,20 +17,24 @@
     "re:build-npm": "npm run rm:all && npm install && npm run build",
     "dev:host": "vite --host",
     "vite:start": "vite",
-    "vite:build": "vite build"
+    "vite:build": "vite build",
+    "codegen": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
-    "@apollo/client": "^3.8.8",
+    "@apollo/client": "^3.8.10",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@faker-js/faker": "^8.1.0",
+    "@graphql-codegen/cli": "^5.0.0",
     "@iconify/react": "^4.1.1",
     "@mui/lab": "^5.0.0-alpha.147",
     "@mui/material": "^5.14.12",
     "apexcharts": "^3.43.0",
+    "codegen": "^0.1.0",
     "date-fns": "^2.30.0",
     "graphql": "^16.8.1",
     "history": "^5.3.0",
+    "http-proxy-middleware": "^2.0.6",
     "lodash": "^4.17.21",
     "numeral": "^2.0.6",
     "prop-types": "^15.8.1",
@@ -43,6 +47,8 @@
     "simplebar-react": "^3.2.4"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "5.0.0",
+    "@graphql-codegen/client-preset": "4.1.0",
     "@vitejs/plugin-react-swc": "^3.4.0",
     "eslint": "^8.51.0",
     "eslint-config-airbnb": "^19.0.4",
