--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@faker-js/faker": "^8.1.0",
     "@graphql-codegen/cli": "^5.0.0",
     "@iconify/react": "^4.1.1",
+    "@material-ui/core": "^4.12.4",
     "@mui/lab": "^5.0.0-alpha.147",
     "@mui/material": "^5.14.12",
     "apexcharts": "^3.43.0",
@@ -40,11 +41,13 @@
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.47.0",
     "react-router-dom": "^6.16.0",
-    "simplebar-react": "^3.2.4"
+    "simplebar-react": "^3.2.4",
+    "victory": "^36.9.1"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "5.0.0",
