--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.47.0",
     "react-router-dom": "^6.16.0",
+    "react-toastify": "^10.0.5",
     "recharts": "^2.12.3",
     "simplebar-react": "^3.2.4",
     "victory": "^36.9.1"
