--- a/package.json
+++ b/package.json
@@ -22,14 +22,15 @@
   },
   "dependencies": {
     "@apollo/client": "^3.8.10",
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@faker-js/faker": "^8.1.0",
     "@graphql-codegen/cli": "^5.0.0",
     "@iconify/react": "^4.1.1",
     "@material-ui/core": "^4.12.4",
+    "@mui/icons-material": "^5.15.14",
     "@mui/lab": "^5.0.0-alpha.147",
-    "@mui/material": "^5.14.12",
+    "@mui/material": "^5.15.14",
     "apexcharts": "^3.43.0",
     "codegen": "^0.1.0",
     "date-fns": "^2.30.0",
@@ -45,7 +46,7 @@
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.47.0",
-    "react-router-dom": "^6.16.0",
+    "react-router-dom": "^6.22.3",
     "react-toastify": "^10.0.5",
     "recharts": "^2.12.3",
     "simplebar-react": "^3.2.4",
