--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.47.0",
+    "react-image-lightbox": "^5.1.4",
+    "react-images": "^1.2.0-beta.7",
     "react-router-dom": "^6.22.3",
     "react-toastify": "^10.0.5",
     "recharts": "^2.12.3",
