--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@mui/lab": "^5.0.0-alpha.147",
     "@mui/material": "^5.15.14",
     "apexcharts": "^3.43.0",
+    "axios": "^1.7.2",
     "codegen": "^0.1.0",
     "date-fns": "^2.30.0",
     "graphql": "^16.8.1",
@@ -39,6 +40,7 @@
     "http-proxy-middleware": "^2.0.6",
     "lodash": "^4.17.21",
     "numeral": "^2.0.6",
+    "opencage-api-client": "^1.0.7",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
